--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FridgeApp"
-        android:name=".helpers.FridgeApp"
+        android:name=".loaders.FridgeApp"
         tools:targetApi="31">
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -26,7 +26,7 @@
                 android:resource="@xml/provider_paths" />
         </provider>
         <activity
-            android:name=".view.MainActivity"
+            android:name=".loaders.MainActivity"
             android:exported="true"
             android:label=".MainActivity"
             android:theme="@style/Theme.FridgeApp.NoActionBar"
